# case_study

./: README.md  pyproject.toml
case_study/model/: model.py  run_metrics.py
case_study/train/: train.py
case_study/utils/: data.py  plot.py  utils.py
streamlit_demo/: app.py
streamlit_demo/pages/: part1.py  part2.py
