[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cod-streamlit"
version = "0.1.0"
description = "cod"
readme = "README.md"
requires-python = ">=3.12"

[tool.setuptools]
packages = ["streamlit_demo", "case_study"]

[tool.uv]
dev-dependencies = [
    "black==24.10.0",
    "loguru>=0.7.3",
    "matplotlib==3.9.2",
    "numpy==2.1.3",
    "pandas==2.2.3",
    "plotly==5.24.1",
    "scikit-learn==1.6.1",
    "streamlit==1.40.1",
    "uv==0.5.2",
    "xgboost==2.1.4",
]

[tool.black]
target-version = ["py312"]
line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "I", # isort
    "F401", # remove unused imports
]

[tool.mypy]
python = "3.12"
ignore_errors = true
